# royale-analytics

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.claude/skills/royale-analyzer/: SKILL.md
docs/superpowers/plans/: 2026-06-22-royale-analytics-mvp.md
docs/superpowers/specs/: 2026-06-22-royale-analytics-mvp-design.md
src/royale_analytics/: api_client.py  battletime.py  brief.py  classify.py  cli.py  config.py  decks.py  errors.py  features.py  reference.py  store.py  tags.py
src/royale_analytics/reference/: archetype_profiles.json  archetype_rules.json  card_roles.json  template_decks.json
tests/: factories.py  test_api_client_core.py  test_api_client_endpoints.py  test_battletime.py  test_brief_json.py  test_brief_markdown.py  test_classify_deck.py  test_cli_analyze.py  test_cli_fetch.py  test_cli_init.py  test_config.py  test_decks.py  test_features.py  test_match_deck.py  test_reference.py  test_scaffold.py  test_skill_md.py  test_store_read.py  test_store_schema.py  test_store_write.py  test_tags.py
