[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "royale-analytics"
version = "0.1.0"
description = "OSS AI analytics tool for Clash Royale battle history (unofficial; not endorsed by Supercell)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "royale-analytics contributors" }]
dependencies = [
    "httpx",
    "click",
    "python-dotenv",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
ra = "royale_analytics.cli:cli"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
royale_analytics = ["reference/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
